- Fix crash in plasma applet
- Added select all action, manual announce now gets SHIFT + A as shortcut to not conflict with select all 
- Make sure average download speed calculation doesn't wrap around (175747)
- Update buttons when torrent changes status (174815)
- Fix pause button getting disabled when current view doesn't have any torrents (176442)

Changes in 3.2beta1 :
- Ask to create directory in fileselectdlg, if it does not exist (163965)
- Added scripting plugin
- Use paths to indicate where a group should go in the GroupView tree
- Expand dbus interface significantly (154483)
- Added feature to disable PEX globally
- Make sure that DHT and PEX checkboxes in view menu are disabled if the feature is disabled globally
- Added plasma applet and dataengine
- Make custom IP to sent to tracker configurable again (166314)
- Add column in QM to show the order of a torrent in the queue
- IP filter revamped, and auto update added (155648)
- Improve performance iby removing unnecessary dataChanged signals
- Improved networking code, which should lead to more stable download speeds
- Fix bug causing closed connections not to be detected
- Make it possible to rename files and folders in fileselectdlg (152813 and 134098)
- Deleting data files is now done in a background job
- Added patch from Adam Forsyth which keeps track of wether we are interested in a peer or not (167938)
- Added patch from Adam Forsyth with some modifications, which allows you to rename torrents in the main torrent list.(168459 and 157544)
- Revamped webinterface
- Patch from Adam Forsyth which adds a second kfiledialog:// keyword openTorrentData (168693)
- Added modified patch from Adam Forsyth showing the directory percentages in the file tree (168062)
- Added patch from Adam Forsyth, which kills stalled peers (168397)
- Plugins with a separate logging id, now need to register and unregister their id with LogSystemManager